Mobile responsive fix

--- a/src/scss/components/_ribbon.scss
+++ b/src/scss/components/_ribbon.scss
@@ -14,6 +14,7 @@
 
     @media (max-width: 480px) {
         justify-content: center;
+        padding: 0;
     }
 
     .ribbon-logo, .ribbon-email {
