--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -71,7 +71,7 @@
 
             @media (max-width: 480px) {
                 font-size: 2.75rem;
-                line-height: 2rem;
+                line-height: 2.5rem;
             }
 
             .my-name {}
@@ -387,9 +387,9 @@
                     align-self: center;
 
                     @media (max-width: 480px) {
-                        i {
-                            font-size: 1.25rem;
-                        }
+                        font-size: 1.25rem;
+                        padding: 0 0 0 20px;
+                        margin-top: 10px;
                     }
                 }
             }
@@ -531,6 +531,7 @@
                     gap: 0 20px;
                     height: 300px;
                     width: 100%;
+                    align-content: flex-start;
                 }
 
                 span {
