--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -451,7 +451,7 @@
                 margin-top: 10rem;
 
                 @media (max-width: 480px) {
-                    margin-top: 5rem;
+                    margin-top: 4rem;
                     flex-direction: column;
                 }
             }
@@ -875,12 +875,23 @@
 
                     &:hover {
                         transform: translateX(-3%);
+                        @media (max-width: 480px) {
+                            transform: unset;
+                        }
+                    }
+
+                    @media (max-width: 480px) {
+                        transform: unset;
                     }
                 }
 
                 &:hover {
                     transform: translateX(95%);
                     transition: all 0.3s ease-in-out;
+
+                    @media (max-width: 480px) {
+                        transform: unset;
+                    }
                 }
 
                 .card-stack {
@@ -1149,6 +1160,10 @@
             .email-wrapper {
 
                 padding-bottom: 8rem;
+
+                @media (max-width: 480px) {
+                    padding-bottom: 4rem;
+                }
 
                 p,
                 h2 {
